support for composite form input
